# Panoramachine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
include/: CMakeLists.txt  CorrectionAlgorithms.hpp  DistortImage.hpp  Feature.hpp  FeatureDataset.hpp  FeatureDetector.hpp  FeatureDetector.inl  Image.hpp  Image.inl  ImagePostProcessing.hpp  KdTree.hpp  KdTree.inl  MathTypes.hpp  Momentum.hpp  MorphTransform.hpp  NeuralNetwork.hpp  Stitch.hpp  StitchImages.hpp  TrainFeatureDetector.hpp  Utils.hpp  Utils.inl
res/: checkerboard.exr
src/: CMakeLists.txt  CorrectionAlgorithm1.cpp  CorrectionAlgorithm2.cpp  CorrectionAlgorithm3.cpp  CorrectionAlgorithm4.cpp  DistortImage.cpp  Feature.cpp  FeatureDataset.cpp  FeatureDetector.cpp  ImagePostProcessing.cpp  MorphTransform.cpp  Stitch.cpp  StitchImages.cpp  TrainFeatureDetector.cpp  Utils.cpp  main.cpp
